--- a/app/views/users/_user.html.erb
+++ b/app/views/users/_user.html.erb
@@ -3,7 +3,7 @@
   <%= link_to user.name, user %>
 
   <% if current_user.admin? && !current_user?(user) %>
-  	<%= link_to "delete", user, method: :delete, data: {confirm: "You sure?"} %>
+  	| <%= link_to "Delete", user, method: :delete, data: {confirm: "You sure?"} %>
 
   <% end %>
 </li>
